--- a/index.html
+++ b/index.html
@@ -13,27 +13,28 @@
            <div class="slide active" style="background-image: url(photos/IMG_20190411_161846.jpg);">
         <h3 class="h3">Say something</h3>
                  </div>
-         <div class="slide acctive" style="background-image: url(photos/IMG_20190411_162016.jpg);">
+         <div class="slide" style="background-image: url(photos/IMG_20190411_162016.jpg);">
         <h3 class="h3">Say something</h3>
              </div>
-                <div class="slide active" style="background-image: url(photos/IMG_20190425_155134.jpg);">
+                <div class="slide" style="background-image: url(photos/IMG_20190425_155134.jpg);">
         <h3 class="h3">Say something</h3>
              </div>
-            <div class="slide  active" style="background-image: url(photos/IMG_20190530_201031.jpg);">
+            <div class="slide" style="background-image: url(photos/IMG_20190530_201031.jpg);">
         <h3 class="h3">Say something</h3>
               </div>
-                <div class="slide active" style="background-image: url(photos/IMG_20190820_114554.jpg);">
+                <div class="slide" style="background-image: url(photos/IMG_20190820_114554.jpg);">
         <h3 class="h3">Say something</h3>
                 </div>
-        <div class="slide active" style="background-image: url(photos/IMG_20190916_164649.jpg);">
-            <h3 class="h3">Say something</h3>
+        <div class="slide"  style="background-image: url(photos/IMG_20200312_212019.jpg);">
+           <h3 class="h3">a big project given to me by Mr.Mthew himself,a great honor to work on it</h3>
         </div>
-            <div class="slide active" style="background-image: url(photos/IMG_20191029_124335.jpg);">
+            <div class="slide" style="background-image: url(photos/IMG_20191029_124335.jpg);">
                 <h3 class="h3">Say something</h3>
             </div>
     
      </div>
 </div>
-<script src="js"></script>
+<script src="index.js"></script>
 </body>
+
 </html>
